# inversion-list

./: Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
src/: error.rs  lib.rs  list.rs  map.rs  test_utilities.rs  utilities.rs
src/iter/: map.rs  mod.rs
test-utilities/: Cargo.toml
test-utilities/src/: lib.rs
tests/: inversion_map.rs
